--- a/boardProject-boot/build.gradle
+++ b/boardProject-boot/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
-	implementation 'org.springframework.boot:spring-boot-starter-aop:3.4.4'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.named('test') {
